Correção no método PUT produto.